# Shumi-Note

./: README.md  pyproject.toml
books/: README.md
ii-hanasi/: intro-to-convex-optimization.md
lectures/RL/: PROB_MDP.md  PROB_sequential_decision_making.md  syllabus.md
notebooks/: BANDIT_General_Eluder_dimension.ipynb  BANDIT_General_linear_best_arm.ipynb  BANDIT_General_linear_improved.ipynb  BANDIT_General_linear_safety.ipynb  BANDIT_Kiefer_Wolfowitz.ipynb  BANDIT_UCB_regret_proof.ipynb  BANDIT_adversarial.ipynb  BANDIT_adversarial_linear.ipynb  BANDIT_basics.ipynb  BANDIT_contextual.ipynb  BANDIT_linear_improved.ipynb  BANDIT_utils.ipynb  CONTROL_PAC_Bayes.ipynb  CVX_Danskin_theorem.ipynb  CVX_MVEE_algorithm.ipynb  CVX_convex_functions.ipynb  CVX_convex_sets.ipynb  CVX_duality.ipynb  CVX_minimum_volume_ellipsoids.ipynb  CVX_sensitivity_analysis.ipynb  CVX_weakly_convex_and_Moreau_envelope.ipynb  LA_Gershgorin_circle_theorem.ipynb  LA_graph.ipynb  LA_integer_matrix.ipynb  LA_matrix_definite.ipynb  LA_matrix_determinant.ipynb  LA_matrix_rank.ipynb  LA_normal_form.ipynb  LA_normed_linear_space.ipynb  LA_vector_space.ipynb  MATH_Envelope_theorem.ipynb  MATH_FA_linear_topological_space.ipynb  MATH_Generalization_Boosting.ipynb  MATH_Generalization_L2_L1_regularization.ipynb  MATH_Generalization_NN.ipynb  MATH_Generalization_VC_and_Rademacher.ipynb  MATH_Generalization_finite_hypothesis_bound.ipynb  MATH_Generalization_infinite_hypothesis_Rademacher.ipynb  MATH_Generalization_margin_loss_and_SVM.ipynb  MATH_Generalization_multi_class_classification.ipynb  (+249 more)
(+14 files in other folders)
