[tool.poetry]
name = "shumi"
version = "0.1.0"
description = ""
authors = ["syuntoku14 <syuntoku14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
jax = "^0.4.1"
seaborn = "^0.12.2"
matplotlib = "^3.6.3"
notebook = "^6.5.2"
jaxlib = "^0.4.1"
tqdm = "^4.64.1"
celluloid = "^0.2.0"
chex = "^0.1.6"
dm-haiku = "^0.0.9"
optax = "^0.1.4"
jaxopt = "^0.6"
graphviz = "^0.20.1"
ipywidgets = "^8.0.5"
ipympl = "^0.9.3"
pulp = "^2.7.0"
cvxpy = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
