[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [{ name = "syuntoku14", email = "syuntoku14@gmail.com" }]
requires-python = "<4.0,>=3.9"
dependencies = [
    "numpy<2.0.0,>=1.24.1",
    "jax<1.0.0,>=0.4.1",
    "seaborn<1.0.0,>=0.12.2",
    "matplotlib<4.0.0,>=3.6.3",
    "notebook<7.0.0,>=6.5.2",
    "jaxlib<1.0.0,>=0.4.1",
    "tqdm<5.0.0,>=4.64.1",
    "celluloid<1.0.0,>=0.2.0",
    "chex<1.0.0,>=0.1.6",
    "dm-haiku<1.0.0,>=0.0.9",
    "optax<1.0.0,>=0.1.4",
    "jaxopt<1.0,>=0.6",
    "graphviz<1.0.0,>=0.20.1",
    "ipywidgets<9.0.0,>=8.0.5",
    "ipympl<1.0.0,>=0.9.3",
    "pulp<3.0.0,>=2.7.0",
    "cvxpy<2.0.0,>=1.3.2",
]
name = "shumi"
version = "0.1.0"
description = ""
readme = "README.md"
